<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/EditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account"
        android:layout_toLeftOf="@+id/account"
        android:text="@string/account"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwd"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="7dp"
        android:ems="9"
        android:hint="@string/inputacc"
        android:singleLine="true" />

    <TextView
        android:id="@+id/EditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwd"
        android:layout_toLeftOf="@+id/passwd"
        android:text="@string/passwd"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="7dp"
        android:ems="9"
        android:hint="@string/inputpwd"
        android:singleLine="true" >
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/EditText0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/loginWellcome"
        android:textSize="20sp" />

</RelativeLayout>